@@ -1,3 +1,8 @@
+2002-03-14  Bernhard Rosenkraenzer <bero@redhat.com>
+	* src/Makefile.am, po/Makefile.in.in: Support DESTDIR properly
+	* tests/bre.tests: Add fix from
+	  Peter Breitenlohner <peb@mppmu.mpg.de>
+
 2002-03-13  Bernhard Rosenkraenzer <bero@redhat.com>
 	* configure.in, m4/regex.m4, m4/malloc.m4, m4/realloc.m4:
 	  Don't set LIBOBJS directly, autoconf 2.53 doesn't like it
